--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -31,6 +31,7 @@
 
 
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -376,6 +377,10 @@
 
 
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -384,6 +389,18 @@
                 android:textColor="@color/black"
                 android:layout_marginLeft="@dimen/_20sdp"
                 android:layout_marginTop="@dimen/_10sdp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Privacy policy"
+                    android:textSize="@dimen/_14sdp"
+                    android:id="@+id/privacyPolicy"
+                    android:textColor="@color/black"
+                    android:layout_marginLeft="@dimen/_110sdp"
+                    android:layout_marginTop="@dimen/_10sdp"/>
+            </LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -402,7 +419,8 @@
                     android:layout_width="@dimen/_40sdp"
                     android:layout_height="@dimen/_40sdp"
                     android:layout_marginLeft="@dimen/_30sdp"
-                    android:src="@drawable/telegram"
+                    android:id="@+id/portfolio"
+                    android:src="@drawable/global"
                     android:layout_gravity="center"/>
                 <ImageView
                     android:layout_width="@dimen/_40sdp"
@@ -423,7 +441,8 @@
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
-        </LinearLayout>
 
+        </LinearLayout>
     </androidx.drawerlayout.widget.DrawerLayout>
+
 </LinearLayout>
