--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -25,8 +25,8 @@
 
         <menu>
             <item
-                android:id="@+id/nav_aboutus"
-                android:title="About Us"
+                android:id="@+id/privacy"
+                android:title="About"
                 android:icon="@drawable/aboutus"/>
 
             <item
