--- a/app/src/main/res/layout/activity_syllabus_pdf.xml
+++ b/app/src/main/res/layout/activity_syllabus_pdf.xml
@@ -55,8 +55,7 @@
         app:cardCornerRadius="@dimen/_10sdp"
         android:id="@+id/syllabus_download"
         android:layout_gravity="center"
-        android:backgroundTint="#33F63B"
-        android:layout_marginTop="@dimen/_15sdp">
+        android:backgroundTint="#4CAF50">
 
         <TextView
             android:layout_width="wrap_content"
