--- a/app/src/main/res/layout/activity_test_two.xml
+++ b/app/src/main/res/layout/activity_test_two.xml
@@ -129,7 +129,7 @@
 
             <Button
                 android:id="@+id/btnPre"
-                android:layout_width="wrap_content"
+                android:layout_width="110dp"
                 android:layout_marginTop="@dimen/_60sdp"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/primary"
@@ -138,11 +138,11 @@
                 android:layout_marginRight="@dimen/_10sdp"/>
             <Button
                 android:id="@+id/btnNext"
-                android:layout_width="wrap_content"
+                android:layout_width="110dp"
                 android:layout_marginTop="@dimen/_60sdp"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/primary"
-                android:layout_marginLeft="@dimen/_100sdp"
+                android:layout_marginLeft="@dimen/_65sdp"
                 android:text="Next"
                 android:layout_marginRight="@dimen/_10sdp"/>
 
