--- a/app/src/main/res/layout/activity_buddhimatta_questions.xml
+++ b/app/src/main/res/layout/activity_buddhimatta_questions.xml
@@ -113,8 +113,6 @@
                 android:id="@+id/rgOptions"
                 android:layout_width="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="@dimen/_10sdp"
-
                 android:backgroundTint="@color/primary"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -130,24 +128,22 @@
 
             <Button
                 android:id="@+id/btnPre"
-                android:layout_width="wrap_content"
+                android:layout_width="110dp"
                 android:layout_marginTop="@dimen/_60sdp"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/primary"
                 android:text="Previous"
                 android:layout_marginLeft="@dimen/_20sdp"
                 android:layout_marginRight="@dimen/_10sdp"/>
-
             <Button
                 android:id="@+id/btnNext"
-                android:layout_width="wrap_content"
+                android:layout_width="110dp"
                 android:layout_marginTop="@dimen/_60sdp"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/primary"
-                android:layout_marginLeft="@dimen/_100sdp"
+                android:layout_marginLeft="@dimen/_65sdp"
                 android:text="Next"
                 android:layout_marginRight="@dimen/_10sdp"/>
-
 
         </LinearLayout>
 
