--- a/app/src/main/res/layout/activity_chalu_ghada_modi.xml
+++ b/app/src/main/res/layout/activity_chalu_ghada_modi.xml
@@ -112,8 +112,6 @@
                 android:id="@+id/rgOptions"
                 android:layout_width="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="@dimen/_10sdp"
-
                 android:backgroundTint="@color/primary"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -129,7 +127,7 @@
 
             <Button
                 android:id="@+id/btnPre"
-                android:layout_width="wrap_content"
+                android:layout_width="110dp"
                 android:layout_marginTop="@dimen/_60sdp"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/primary"
@@ -138,14 +136,13 @@
                 android:layout_marginRight="@dimen/_10sdp"/>
             <Button
                 android:id="@+id/btnNext"
-                android:layout_width="wrap_content"
+                android:layout_width="110dp"
                 android:layout_marginTop="@dimen/_60sdp"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/primary"
-                android:layout_marginLeft="@dimen/_100sdp"
+                android:layout_marginLeft="@dimen/_65sdp"
                 android:text="Next"
                 android:layout_marginRight="@dimen/_10sdp"/>
-
 
         </LinearLayout>
 
