--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -29,10 +29,10 @@
                 android:id="@+id/toolbar"
                 android:background="@color/primary"
                 android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-                android:title="She Safe"
                 android:titleTextColor="@color/white"
                 android:titleMarginStart="10dp"
                 android:layout_marginBottom="5dp"
+                app:navigationIcon="@drawable/ic_menu"
                 tools:ignore="MissingConstrants">
 
 
