--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -3,48 +3,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-    <item android:title="Home">
-
-        <menu>
             <item
                 android:id="@+id/nav_home"
                 android:icon="@drawable/home"
                 android:title="Home"/>
-
 
             <item
                 android:id="@+id/nav_settings"
                 android:icon="@drawable/setting"
                 android:title="Setting"/>
 
-        </menu>
-    </item>
-
-
-    <item android:title="About">
-
-        <menu>
             <item
-                android:id="@+id/privacy"
+                android:id="@+id/nav_country"
+                android:title="Countributers"
+                android:icon="@drawable/ic_countribution"/>
+
+            <item
+                android:id="@+id/nav_disclaimer"
+                android:title="Disclamer"
+                android:icon="@drawable/ic_disclaimer"/>
+
+            <item
+                android:id="@+id/nav_privacy"
+                android:title="Privacy Policy"
+                android:icon="@drawable/ic_privacy"/>
+
+            <item
+                android:id="@+id/nav_about"
                 android:title="About"
-                android:icon="@drawable/aboutus"/>
+                android:icon="@drawable/ic_about"/>
 
             <item
-                android:id="@+id/nav_feedback"
-                android:icon="@drawable/dev"
-                android:title="Developers"/>
+                android:id="@+id/nav_rate"
+                android:title="Rate"
+                android:icon="@drawable/ic_rate"/>
 
             <item
                 android:id="@+id/nav_share"
-                android:title="Karan A. Bankar"/>
-
-            <item
-                android:id="@+id/nav_shar"
-                android:title="Chaitanya S. Kakde"/>
-
-        </menu>
-    </item>
-
-
-
+                android:title="Share"
+                android:icon="@drawable/ic_share"/>
 </menu>
